Entregue ao professor
Não faço ideia do que mudei, mas sei qeu foi isso que entreguei ao professor e passei na disciplina.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=in.txt
+application.args=in1.txt in2.txt in3.txt in4.txt in5.txt
 compile.on.save=true
 do.depend=false
 do.jar=true
